--- a/hackaton-app/package.json
+++ b/hackaton-app/package.json
@@ -13,6 +13,9 @@
     "@types/node": "^22.7.2",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
+    "native": "^0.3.3",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
