--- a/gql/package.json
+++ b/gql/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "apollo-server": "^3.13.0",
     "graphql": "^16.9.0",
+    "jest": "^29.7.0",
     "node-fetch": "^2.6.7"
   },
   "name": "gql",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon ."
   },
   "keywords": [],
