--- a/hackaton-app/package.json
+++ b/hackaton-app/package.json
@@ -13,9 +13,12 @@
     "@types/node": "^22.7.2",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "hackaton-app": "file:",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
