--- a/RestAPI/package.json
+++ b/RestAPI/package.json
@@ -15,12 +15,16 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.13",
     "babel-jest": "^29.7.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.21.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.22",
+    "restapi": "file:"
   }
 }
