--- a/hackaton-app/package.json
+++ b/hackaton-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.1",
@@ -13,6 +14,7 @@
     "@types/node": "^22.7.2",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "graphql": "^16.9.0",
     "hackaton-app": "file:",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
